--- a/backend/wrangler.jsonc
+++ b/backend/wrangler.jsonc
@@ -17,7 +17,7 @@
   "migrations": [
     {
       "tag": "v1",
-      "new_classes": ["GuardianSession"]
+      "new_sqlite_classes": ["GuardianSession"]
     }
   ],
 
